--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "better-scroll": "^2.4.2",
+    "immutable": "^4.0.0-rc.14",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "immutable": "^4.0.0-rc.14",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.1",
     "react-router-config": "^5.1.1",
