--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "immutable": "^4.0.0-rc.14",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-lazyload": "^3.2.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.1",
     "react-router-config": "^5.1.1",
@@ -26,15 +27,16 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.2",
-    "@types/node": "^12.0.0",
+    "@types/react-lazyload": "^3.1.1",
     "@types/react-router-config": "^5.0.3",
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-immutable": "^4.0.1",
-    "@types/styled-components": "^5.1.13"
+    "@types/styled-components": "^5.1.13",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "typescript": "^4.3.2",
+    "vite": "^2.5.2"
   }
 }
