--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "better-scroll": "^2.4.2",
-    "immutable": "^4.0.0-rc.14",
+    "immer": "^9.0.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-lazyload": "^3.2.0",
@@ -19,7 +19,6 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
-    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "swiper": "^7.0.2",
@@ -33,7 +32,6 @@
     "@types/react-lazyload": "^3.1.1",
     "@types/react-router-config": "^5.0.3",
     "@types/react-router-dom": "^5.1.8",
-    "@types/redux-immutable": "^4.0.1",
     "@types/styled-components": "^5.1.13",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.3.2",
