--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
@@ -37,6 +38,7 @@
     "@types/react-lazyload": "^3.1.1",
     "@types/react-router-config": "^5.0.3",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-transition-group": "^4.4.2",
     "@types/styled-components": "^5.1.13",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.32.0",
